--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.mjs"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
